// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Popup should render the closed Popup UI without throwing an error 1`] = `
<Memo()
  isActive={false}
  loading={false}
  onClose={[MockFunction]}
  orientation="landscape"
  title="Popup Test"
  url="/about"
>
  <styles__Container
    isActive={false}
    isLoading={false}
  >
    <section
      className="styles__Container-hsnn8o-0 kHaxRx"
    >
      <styles__Lightbox
        onClick={[Function]}
      >
        <div
          className="styles__Lightbox-hsnn8o-1 jVNA-Dl"
          onClick={[Function]}
        />
      </styles__Lightbox>
      <styles__Dialog>
        <div
          className="styles__Dialog-hsnn8o-2 ghzZou"
        >
          <styles__Close
            onClick={[Function]}
          >
            <div
              className="styles__Close-hsnn8o-5 jwZAfl"
              onClick={[Function]}
            >
              X
            </div>
          </styles__Close>
          <styles__Landscape
            alt="Popup Test"
            src="/about"
          >
            <img
              alt="Popup Test"
              className="styles__Landscape-hsnn8o-3 kUOdOv"
              src="/about"
            />
          </styles__Landscape>
        </div>
      </styles__Dialog>
    </section>
  </styles__Container>
</Memo()>
`;

exports[`Component -> Popup should render the loading Popup UI without throwing an error 1`] = `
<Memo()
  isActive={true}
  loading={true}
  onClose={[MockFunction]}
  orientation="landscape"
  title="Popup Test"
  url="/about"
>
  <styles__Container
    isActive={true}
    isLoading={false}
  >
    <section
      className="styles__Container-hsnn8o-0 dPZtEY"
    >
      <styles__Lightbox
        onClick={[Function]}
      >
        <div
          className="styles__Lightbox-hsnn8o-1 jVNA-Dl"
          onClick={[Function]}
        />
      </styles__Lightbox>
      <styles__Dialog>
        <div
          className="styles__Dialog-hsnn8o-2 ghzZou"
        >
          <styles__Close
            onClick={[Function]}
          >
            <div
              className="styles__Close-hsnn8o-5 jwZAfl"
              onClick={[Function]}
            >
              X
            </div>
          </styles__Close>
          <styles__Landscape
            alt="Popup Test"
            src="/about"
          >
            <img
              alt="Popup Test"
              className="styles__Landscape-hsnn8o-3 kUOdOv"
              src="/about"
            />
          </styles__Landscape>
        </div>
      </styles__Dialog>
    </section>
  </styles__Container>
</Memo()>
`;

exports[`Component -> Popup should render the open Popup UI without throwing an error 1`] = `
<Memo()
  isActive={true}
  loading={false}
  onClose={[MockFunction]}
  orientation="landscape"
  title="Popup Test"
  url="/about"
>
  <styles__Container
    isActive={true}
    isLoading={false}
  >
    <section
      className="styles__Container-hsnn8o-0 dPZtEY"
    >
      <styles__Lightbox
        onClick={[Function]}
      >
        <div
          className="styles__Lightbox-hsnn8o-1 jVNA-Dl"
          onClick={[Function]}
        />
      </styles__Lightbox>
      <styles__Dialog>
        <div
          className="styles__Dialog-hsnn8o-2 ghzZou"
        >
          <styles__Close
            onClick={[Function]}
          >
            <div
              className="styles__Close-hsnn8o-5 jwZAfl"
              onClick={[Function]}
            >
              X
            </div>
          </styles__Close>
          <styles__Landscape
            alt="Popup Test"
            src="/about"
          >
            <img
              alt="Popup Test"
              className="styles__Landscape-hsnn8o-3 kUOdOv"
              src="/about"
            />
          </styles__Landscape>
        </div>
      </styles__Dialog>
    </section>
  </styles__Container>
</Memo()>
`;
